@@ -388,7 +388,8 @@ all_tests =					\
   tests/misc/uniq-perf.sh			\
   tests/misc/xattr.sh				\
   tests/tail-2/wait.sh				\
-  tests/tail-2/retry.sh			\
+  tests/tail-2/retry.sh				\
+  tests/tail-2/symlink.sh				\
   tests/chmod/c-option.sh			\
   tests/chmod/equal-x.sh			\
   tests/chmod/equals.sh				\
