@@ -43,8 +43,11 @@ GNU coreutils NEWS                                    -*- outline -*-
    by the alignment bug introduced in coreutils-6.0]
 
   tail --retry -f now waits for the files specified to appear.  Before, tail
-  would immediately exit when such a file is inaccessible during the initial
-  open.
+  would immediately exit when such a file is initially inaccessible.
+  [This bug was introduced when inotify support was added in coreutils-7.5]
+
+  tail -F has improved handling of symlinks.  Previously tail didn't respond
+  to the symlink target (re)appearing after being (re)created.
   [This bug was introduced when inotify support was added in coreutils-7.5]
 
 ** New features
